[kafka] feat: check & repair system (add bm-cli setup check-repair)
improve ParallelStarvationHandler: now waits for the offsets instead of a time

When starting to read a stream, now records the offsets of each partition
and wait the consumer to have reached at least the end offsets we got earlier

[kafka/clone] feat: reading the CRP topic continuously, ignoring entries having a owner not in the directory